--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,10 @@ dependencies {
 
     compile 'org.springframework.boot:spring-boot-starter-web'
 
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 
