--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,18 @@ dependencies {
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
+    compile 'com.google.guava:guava:11.0.2'
+
+    // logging (and logback-classic included by default with spring-boot-starter-* packages) and @Slf4j support
+    compile "org.slf4j:slf4j-api"
+    compile 'org.codehaus.janino:janino:2.6.1'
+    //compile 'ch.qos.logback:logback-classic:1.1.7'
+    implementation 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+
+
 
 }
 
