--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,23 +5,23 @@ bkco:
   sqs:
     queueName: myqueue
 
-cloud:
-  aws:
-    region:
-      static: eu-west-1
+logging:
+  enableJsonFormat: false
+  level:
+    co.bk.task: DEBUG
 
-spring:
-  autoconfigure:
-    exclude:
-    # https://stackoverflow.com/questions/39233162/using-spring-cloud-starter-aws-outside-of-aws
-    # https://github.com/spring-cloud/spring-cloud-aws/issues/335
-    - org.springframework.cloud.aws.autoconfigure.context.ContextInstanceDataAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.context.ContextCredentialsAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.context.ContextRegionProviderAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.context.ContextResourceLoaderAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.context.ContextStackAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.mail.MailSenderAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.cache.ElastiCacheAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.messaging.MessagingAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.jdbc.AmazonRdsDatabaseAutoConfiguration
-    - org.springframework.cloud.aws.autoconfigure.metrics.CloudWatchExportAutoConfiguration
+#spring:
+#  autoconfigure:
+#    exclude:
+#    # https://stackoverflow.com/questions/39233162/using-spring-cloud-starter-aws-outside-of-aws
+#    # https://github.com/spring-cloud/spring-cloud-aws/issues/335
+#    - org.springframework.cloud.aws.autoconfigure.context.ContextInstanceDataAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.context.ContextCredentialsAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.context.ContextRegionProviderAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.context.ContextResourceLoaderAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.context.ContextStackAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.mail.MailSenderAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.cache.ElastiCacheAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.messaging.MessagingAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.jdbc.AmazonRdsDatabaseAutoConfiguration
+#    - org.springframework.cloud.aws.autoconfigure.metrics.CloudWatchExportAutoConfiguration
